# pegoat

./: CMakeLists.txt  CODEOWNERS  README.md  goat.cpp  sign-nested.ps1  sign.ps1
.github/workflows/: ci.yml  release.yml
